// NAT model

syntax = "proto3";

package netproto;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";
import "match.proto";

// ---------------------------- Nat Pool API ----------------------------

// Nat pool rpc service
service NatPoolApi {
    // options for auto generating rest endpoints
    option(venice.naplesRestService) = {
        Object: "NatPool",
        Method: ["list", "post", "put", "delete"],
        Pattern: "/{ObjectMeta.Tenant}/{ObjectMeta.NameSpace}/{ObjectMeta.Name}"
    };

    rpc GetNatPool (api.ObjectMeta) returns (NatPool) {};
    rpc ListNatPools (api.ObjectMeta) returns (NatPoolList) {};
    rpc WatchNatPools (api.ObjectMeta) returns (stream NatPoolEvent) {};
}

// nat pool object
message NatPool {
    api.TypeMeta    TypeMeta    = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta  ObjectMeta  = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    NatPoolSpec   Spec        = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];
    NatPoolStatus Status      = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}


message NatPoolSpec {
    // Range of IP Addresses for the nat pool
    string IPRange   = 1 [(gogoproto.jsontag) = "ip-range"];
}

// nat pool status
message NatPoolStatus {
    uint64 NatPoolID = 1  [(gogoproto.jsontag) = "id,omitempty"];
    message NatBinding {
        string LocalAddress = 1;
        uint32 LocalPort = 2;
        string GlobalAddress = 3;
        uint32 GlobalPort = 4;
        uint32 Protocol = 5;
    }
    repeated NatBinding NatBindings = 2;
}

// list of nat pools
message NatPoolList {
    repeated NatPool NatPools = 1;
}

// nat pool watch event
message NatPoolEvent {
    api.EventType EventType       = 1 [(gogoproto.jsontag) = "event-type,omitempty"];
    NatPool NatPool   = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "natpool,omitempty"];
}



// ---------------------------- Nat Binding API ----------------------------

// Nat binding rpc service
service NatBindingApi {
    // options for auto generating rest endpoints
    option(venice.naplesRestService) = {
        Object: "NatBinding",
        Method: ["list", "post", "put", "delete"],
        Pattern: "/{ObjectMeta.Tenant}/{ObjectMeta.NameSpace}/{ObjectMeta.Name}"
    };

    rpc GetNatBinding (api.ObjectMeta) returns (NatBinding) {};
    rpc ListNatBindings (api.ObjectMeta) returns (NatBindingList) {};
    rpc WatchNatBindings (api.ObjectMeta) returns (stream NatBindingEvent) {};
}

message NatBinding {
    api.TypeMeta    TypeMeta    = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta  ObjectMeta  = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    NatBindingSpec   Spec        = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];
    NatBindingStatus Status      = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}


// nat binding object
message NatBindingSpec {
    string NatPoolName     = 1[(gogoproto.jsontag) = "nat-pool,omitempty"];
    string IPAddress       = 2[(gogoproto.jsontag) = "ip-address,omitempty"];
}

message NatBindingStatus {
    uint64 NatBindingID = 1[(gogoproto.jsontag) = "id,omitempty"];
    string NatIP        = 2[(gogoproto.jsontag) = "nat-ip,omitempty"];
}


// list of nat bindings
message NatBindingList {
    repeated NatBinding NatBindings = 1;
}

message NatBindingEvent {
    api.EventType EventType       = 1 [(gogoproto.jsontag) = "event-type,omitempty"];
    NatBinding NatBinding         = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "nat-binding,omitempty"];
}

// ---------------------------- Nat Policy API ----------------------------

// Nat policy rpc service
service NatPolicyApi {
    // options for auto generating rest endpoints
    option(venice.naplesRestService) = {
        Object: "NatPolicy",
        Method: ["list", "post", "put", "delete"],
        Pattern: "/{ObjectMeta.Tenant}/{ObjectMeta.Namespace}/{ObjectMeta.Name}"
    };

    rpc GetNatPolicy (api.ObjectMeta) returns (NatPolicy) {};
    rpc ListNatPolicies (api.ObjectMeta) returns (NatPolicyList) {};
    rpc WatchNatPolicies (api.ObjectMeta) returns (stream NatPolicyEvent) {};
}

// nat policy object
message NatPolicy {
    api.TypeMeta    TypeMeta    = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta  ObjectMeta  = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    NatPolicySpec   Spec        = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];
    NatPolicyStatus Status      = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}


message NatPolicySpec {
    repeated NatRule rules = 1   [(gogoproto.nullable) = false, (gogoproto.jsontag) = "rules,omitempty"];
}

// nat rule
message NatRule {
    enum NatAction
    {
        SNAT = 0;  // source address translation
        DNAT = 1;  // destination address translation
        SPAT = 2;  // source port address translation
        DPAT = 3;  // destination port address translation
    }

    // Nat Rule From match selector.
    MatchSelector Src  = 1 [(gogoproto.jsontag) = "source,omitempty"];

    // Nat Rule To match selector.
    MatchSelector Dst    = 2 [(gogoproto.jsontag) = "destination,omitempty"];

    // IP Protocol
    string Protocol     = 3 [(gogoproto.jsontag) = "protocol,omitempty"];

    // From tcp/udp port. Can be a single port or a port range separated by a hyphen
    string FromPort     = 4 [(gogoproto.jsontag) = "from-port,omitempty"];

    // To tcp/udp port. Can be a single port or a port range separated by a hyphen
    string ToPort       = 5 [(gogoproto.jsontag) = "to-port,omitempty"];

    // NAT pool to use
    string NatPool      = 6 [(gogoproto.jsontag) = "nat-pool,omitempty"];

    // Nat action
    string Action       = 7 [(venice.check) = "StrEnum(NatRule.NatAction)",
                             (gogoproto.jsontag) = "action,omitempty"];
    uint64 ID           = 8;
}

message NatPolicyStatus {
    uint64 NatPolicyID = 1  [(gogoproto.jsontag) = "id,omitempty"];
}


// list of nat policies
message NatPolicyList {
    repeated NatPolicy NatPolicies = 1;
}

// security group watch event
message NatPolicyEvent {
    api.EventType EventType       = 1 [(gogoproto.jsontag) = "event-type,omitempty"];
    NatPolicy NatPolicy   = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "nat-policy,omitempty"];
}

